--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 
 body {
-    font-family: Montserrat, Verdana, Arial, sans-serif;
+    font-family: 'Montserrat', Verdana, Arial, sans-serif;
     margin: auto;
     max-width: 900px;
     align-items: center;
